@@ -9,6 +9,7 @@ Markus Barta (http://markus.barta.com)
 David from Little Lumnes (http://www.littlelumens.com)
 Eric Farraro (ejfarraro AT ucdavis edu)
 Josh Isaak (http://www.futurebot.com)
+Rolandas Razma (gamebit AT gmail com)
 David Roach (http://www.creativeclasssoftware.com)
 Alexandre Rousseau (http://www.ninermedia.com)
 Matt Sephton (http://www.gingerbeardman.com)
